internal/gatewayapi/testdata/listenerset-udproute.in.yaml
namespaces:
  - apiVersion: v1
    kind: Namespace
    metadata:
      name: gateway-xls
      labels:
        allow-xls: "true"
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: gateway-xls
      name: composite-gateway
    spec:
      gatewayClassName: envoy-gateway-class
      allowedListeners:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              allow-xls: "true"
      listeners:
        - name: core-http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
listenerSets:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: ListenerSet
    metadata:
      namespace: gateway-xls
      name: udproute-xls
    spec:
      parentRef:
        name: composite-gateway
      listeners:
        - name: extra-udp
          protocol: UDP
          port: 8162
          allowedRoutes:
            kinds:
              - kind: UDPRoute
                group: gateway.networking.k8s.io
            namespaces:
              from: All
udpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: UDPRoute
    metadata:
      namespace: default
      name: udp-app-1
    spec:
      parentRefs:
        - group: gateway.networking.k8s.io
          kind: ListenerSet
          namespace: gateway-xls
          name: udproute-xls
          sectionName: extra-udp
      rules:
        - backendRefs:
            - name: service-1
              port: 8162
              namespace: default
