internal/gatewayapi/testdata/listenerset-udproute.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: composite-gateway
    namespace: gateway-xls
  spec:
    allowedListeners:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            allow-xls: "true"
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: core-http
      port: 80
      protocol: HTTP
  status:
    attachedListenerSets: 1
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: core-http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
infraIR:
  gateway-xls/composite-gateway:
    proxy:
      listeners:
      - name: gateway-xls/composite-gateway/core-http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      - name: gateway-xls/composite-gateway/gateway-xls/udproute-xls/extra-udp
        ports:
        - containerPort: 8162
          name: udp-8162
          protocol: UDP
          servicePort: 8162
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: composite-gateway
          gateway.envoyproxy.io/owning-gateway-namespace: gateway-xls
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: gateway-xls/composite-gateway
      namespace: envoy-gateway-system
listenerSets:
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: udproute-xls
    namespace: gateway-xls
  spec:
    listeners:
    - allowedRoutes:
        kinds:
        - group: gateway.networking.k8s.io
          kind: UDPRoute
        namespaces:
          from: All
      name: extra-udp
      port: 8162
      protocol: UDP
    parentRef:
      name: composite-gateway
  status:
    conditions:
    - lastTransitionTime: null
      message: All listeners are valid
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: null
      message: All listeners are programmed
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: extra-udp
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: UDPRoute
udpRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: UDPRoute
  metadata:
    name: udp-app-1
    namespace: default
  spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: udproute-xls
      namespace: gateway-xls
      sectionName: extra-udp
    rules:
    - backendRefs:
      - name: service-1
        namespace: default
        port: 8162
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: ListenerSet
        name: udproute-xls
        namespace: gateway-xls
        sectionName: extra-udp
xdsIR:
  gateway-xls/composite-gateway:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-gateway-xls-composite-gateway-e1ee602f
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: gateway-xls/composite-gateway
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-gateway-xls-composite-gateway-e1ee602f
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: gateway-xls/composite-gateway
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway-xls
        sectionName: core-http
      name: gateway-xls/composite-gateway/core-http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    udp:
    - address: 0.0.0.0
      externalPort: 8162
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway-xls
        sectionName: extra-udp
      name: gateway-xls/composite-gateway/gateway-xls/udproute-xls/extra-udp
      port: 8162
      route:
        destination:
          metadata:
            kind: UDPRoute
            name: udp-app-1
            namespace: default
          name: udproute/default/udp-app-1/rule/-1
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8162
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8162"
            name: udproute/default/udp-app-1/rule/-1/backend/0
            protocol: UDP
            weight: 1
        name: udproute/default/udp-app-1
